--- a/wiki/CodeSnippets.wiki
+++ b/wiki/CodeSnippets.wiki
@@ -6,4 +6,4 @@ This section will list some code snippets that will probably be useful to us dur
 
 
 = Snippets =
- * [Casting Boost's shared_ptrs]
+ * [CastingBoostSharedPtr Casting Boost's shared_ptrs]
