Edited wiki page through web user interface: Added links for Ogre's partial blending support :D

--- a/wiki/AnimationBlending.wiki
+++ b/wiki/AnimationBlending.wiki
@@ -5,8 +5,14 @@
 
 Below is a list of resources dealing with animation blending. Some of them cover theoretical concepts, where others are more practical, containing code samples.
 
+= Partial blending support in Ogre3D: Blending Masks =
+It allows masking bones in an animationState by defining an array of weights for bones. Setting all bones to 0 except the ones we're interested in will result on that animation not blending those bones (example of use: combine a "point flashlight towards", and "run", so we can discard the bones in the lower body for the point flashlight animation).
+
+Note: the skeleton's blending mode must probably be changed to ANIMBLEND_CUMULATIVE (default is AVERAGE, I think)
 
 = Bibliography =
+  * [http://www.ogre3d.org/docs/api/html/classOgre_1_1AnimationState.html Ogre API - Animation State Class]
+  * [http://www.ogre3d.org/forums/viewtopic.php?f=5&t=54998 Partial blending example]
   * [http://www.ogre3d.org/forums/viewtopic.php?f=11&t=45260 Tecnofreak animation system], by Pau Novau. It may be a good idea to dive into the source code (hosted at sourceforge, a link is provided)
   * [http://www.gamasutra.com/features/20030704/edsall_01.shtml Animation Blending - Achieving inverse kinematics and more]. Gamasutra's article on animation blending.
   * [http://www.ogre3d.org/tikiwiki/AnimationBlender Animation Blender]: Link to Ogre's wiki where a snippet featuring an animation blender class has been pasted.
